<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.smartalec.StudentLectureActivity">

    <include layout="@layout/gp_row"/>

    <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/askQuestionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Have a question?"
                    android:textSize="16sp"
                    android:textColor="@color/textDark"
                    android:padding="6dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/askQuestionEditText"/>

            <EditText
                    android:id="@+id/askQuestionEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/askQuestionTextView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/askQuestionButton"/>

            <Button
                    android:id="@+id/askQuestionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Submit Question"
                    app:layout_constraintTop_toBottomOf="@+id/askQuestionEditText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/leaveFeedbackTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Any feedback on the lecture?"
                    android:textSize="16sp"
                    android:textColor="@color/textDark"
                    android:padding="6dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/leaveFeedbackEditText"/>

            <EditText
                    android:id="@+id/leaveFeedbackEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/leaveFeedbackTextView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/leaveFeedbackButton"/>

            <Button
                    android:id="@+id/leaveFeedbackButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Submit Feedback"
                    app:layout_constraintTop_toBottomOf="@+id/leaveFeedbackEditText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
